--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UA Academy -Lokendra Kumar</title>
+    <title>UA Academy Lokendra Kumar</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -78,7 +78,7 @@
             <div class="contact-info">
                 <div class="info-item">
                     <i class="fas fa-map-marker-alt"></i>
-                    <p>123 Education Street, City-etah, india</p>
+                    <p>123 Education Street, City-Etah, india</p>
                 </div>
                 <div class="info-item">
                     <i class="fas fa-phone"></i>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="info-item">
                     <i class="fas fa-envelope"></i>
-                    <p>lokendrafranklin@gmail.com</p>
+                    <p>lokendrafranklin@gmail.com and  lokendrakumar4812@gmail.com</p>
                 </div>
             </div>
         </div>
