--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <img src="https://media-hosting.imagekit.io/1b3609b668b44289/WhatsApp Image 2025-01-27 at 17.45.54_00005d63.jpg?Expires=1837623351&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=wbPuYhE~HC5V7lC9-7muQr4baoI7BOkf-tCoQyqV5bw5oEd6oIeyzjJex40ICLB6rFl1GK-VH7EIJ40b2y81aiIA~5hxCoInVn1jNjNbz5Lyk6bX5AnH4ykSSniwjk5pzKdsU4IwUE3LLF2jJtgSDFeZtBEKLNb4ifER1GUjUuMx88t6jkBusEFV6pvGm9ZlGd3VoXyk-5xf6pUj6NHrADLrMwvcvoPclhf3QL5YUvLGihtddqjPaMtoGu1MvTmkZtvFt036PdRG4xAcWN9NpfYD~dc~9IgNOCOUzty5khLhGvKfrKMGxk5gmbXoaY--0QeonS3be0UKxS-F4x6ZJQ__" alt="UA Academy Logo">
+            <img src=" https://yt3.googleusercontent.com/SA2vJUEWWqejXKCKhlkzN_PVb7bz17-4u_F53_BJhQi9ub1EwTWlQVU2xkj4bT7mUsTVKR74-Q=s160-c-k-c0x00ffffff-no-rj" alt="UA Academy Logo">
         </div>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
